--- a/app/src/main/res/menu/menu_delete.xml
+++ b/app/src/main/res/menu/menu_delete.xml
@@ -3,18 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="nl.svdoetelaar.madlevel4task2.ui.play.PlayActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/history"
-        android:icon="@drawable/ic_history_white_24dp"
-        android:title="@string/history"
-        app:showAsAction="never" />
-    <item
         android:id="@+id/delete"
         android:icon="@drawable/ic_delete_white_24dp"
         android:title="@string/delete"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
