--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvAllTime" />
 
     <TextView
-        android:id="@+id/tvWinner"
+        android:id="@+id/tvResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
