--- a/app/src/main/res/menu/menu_history.xml
+++ b/app/src/main/res/menu/menu_history.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="nl.svdoetelaar.madlevel4task2.ui.play.PlayActivity">
+    tools:context="nl.svdoetelaar.madlevel4task2.ui.PlayActivity">
     <item
         android:id="@+id/history"
         android:icon="@drawable/ic_history_white_24dp"
