--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/firstFragment">
     <fragment
         android:id="@+id/firstFragment"
-        android:name="nl.svdoetelaar.madlevel4task2.ui.play.PlayFragment"
+        android:name="nl.svdoetelaar.madlevel4task2.ui.PlayFragment"
         android:label="fragment_first"
         tools:layout="@layout/fragment_play" />
 </navigation>
