--- a/app/src/main/res/layout/fragment_game_history.xml
+++ b/app/src/main/res/layout/fragment_game_history.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingVertical="16dp">
 
     <TextView
         android:id="@+id/tvResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
         android:text=""
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tvDateTime"
@@ -18,13 +17,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/ivComputer"
+        android:id="@+id/ivYou"
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_margin="8dp"
         android:background="@color/colorPrimary"
         android:contentDescription="@string/computer_its_choice"
-        app:layout_constraintBottom_toTopOf="@+id/tvComputer"
+        app:layout_constraintBottom_toTopOf="@+id/tvYou"
         app:layout_constraintEnd_toStartOf="@id/tvVS"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDateTime" />
@@ -36,13 +35,13 @@
         android:layout_margin="8dp"
         android:text="@string/v_s"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvComputer"
-        app:layout_constraintEnd_toStartOf="@+id/ivYou"
-        app:layout_constraintStart_toEndOf="@+id/ivComputer"
-        app:layout_constraintTop_toTopOf="@+id/ivComputer" />
+        app:layout_constraintBottom_toTopOf="@+id/tvYou"
+        app:layout_constraintEnd_toStartOf="@+id/ivComputer"
+        app:layout_constraintStart_toEndOf="@+id/ivYou"
+        app:layout_constraintTop_toTopOf="@+id/ivYou" />
 
     <ImageView
-        android:id="@+id/ivYou"
+        android:id="@+id/ivComputer"
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_margin="8dp"
@@ -53,33 +52,30 @@
         app:layout_constraintTop_toBottomOf="@+id/tvDateTime" />
 
     <TextView
-        android:id="@+id/tvComputer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/computer"
-        app:layout_constraintEnd_toEndOf="@+id/ivComputer"
-        app:layout_constraintStart_toStartOf="@+id/ivComputer"
-        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />
-
-    <TextView
         android:id="@+id/tvYou"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/you"
         app:layout_constraintEnd_toEndOf="@+id/ivYou"
-        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="@+id/ivYou"
         app:layout_constraintTop_toBottomOf="@+id/ivYou" />
+
+    <TextView
+        android:id="@+id/tvComputer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/computer"
+        app:layout_constraintEnd_toEndOf="@+id/ivComputer"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="@+id/ivComputer"
+        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />
 
     <TextView
         android:id="@+id/tvDateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
