--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -62,37 +62,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
-        android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/ivComputer"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/ivYou"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/ivComputer"
+        android:id="@+id/ivYou"
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_margin="8dp"
         android:background="@color/colorPrimary"
+        android:contentDescription="@string/computer_its_choice"
         app:layout_constraintBottom_toTopOf="@+id/ivPaper"
         app:layout_constraintEnd_toStartOf="@id/tvVS"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvInstructions"
-        android:contentDescription="@string/computer_its_choice" />
+        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />
 
     <TextView
         android:id="@+id/tvVS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:layout_marginBottom="80dp"
         android:text="@string/v_s"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvComputer"
-        app:layout_constraintEnd_toStartOf="@+id/ivYou"
-        app:layout_constraintStart_toEndOf="@+id/ivComputer"
-        app:layout_constraintTop_toTopOf="@+id/ivComputer" />
+        app:layout_constraintBottom_toBottomOf="@+id/ivYou"
+        app:layout_constraintEnd_toStartOf="@+id/ivComputer"
+        app:layout_constraintStart_toEndOf="@+id/ivYou"
+        app:layout_constraintTop_toTopOf="@+id/ivYou" />
 
     <ImageView
-        android:id="@+id/ivYou"
+        android:id="@+id/ivComputer"
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_margin="8dp"
@@ -104,16 +106,6 @@
         android:contentDescription="@string/your_choice" />
 
     <TextView
-        android:id="@+id/tvComputer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/computer"
-        app:layout_constraintEnd_toEndOf="@+id/ivComputer"
-        app:layout_constraintStart_toStartOf="@+id/ivComputer"
-        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />
-
-    <TextView
         android:id="@+id/tvYou"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -122,6 +114,16 @@
         app:layout_constraintEnd_toEndOf="@+id/ivYou"
         app:layout_constraintStart_toStartOf="@+id/ivYou"
         app:layout_constraintTop_toBottomOf="@+id/ivYou" />
+
+    <TextView
+        android:id="@+id/tvComputer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="@string/computer"
+        app:layout_constraintEnd_toEndOf="@+id/ivComputer"
+        app:layout_constraintStart_toStartOf="@+id/ivComputer"
+        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />
 
     <ImageView
         android:id="@+id/ivRock"
