--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -53,6 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:text="@string/statistics"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvAllTime" />
@@ -74,7 +75,7 @@
         android:layout_height="120dp"
         android:layout_margin="8dp"
         android:background="@color/colorPrimary"
-        android:contentDescription="@string/computer_its_choice"
+        android:contentDescription="@string/your_choice"
         app:layout_constraintBottom_toTopOf="@+id/ivPaper"
         app:layout_constraintEnd_toStartOf="@id/tvVS"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,11 +100,11 @@
         android:layout_height="120dp"
         android:layout_margin="8dp"
         android:background="@color/colorPrimary"
+        android:contentDescription="@string/computer_its_choice"
         app:layout_constraintBottom_toTopOf="@+id/ivScissors"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tvVS"
-        app:layout_constraintTop_toBottomOf="@+id/tvInstructions"
-        android:contentDescription="@string/your_choice" />
+        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />
 
     <TextView
         android:id="@+id/tvYou"
