--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,10 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/firstFragment">
+    app:startDestination="@id/playFragment">
     <fragment
-        android:id="@+id/firstFragment"
+        android:id="@+id/playFragment"
         android:name="nl.svdoetelaar.madlevel4task2.ui.PlayFragment"
-        android:label="fragment_first"
-        tools:layout="@layout/fragment_play" />
+        android:label="fragment_play"
+        tools:layout="@layout/fragment_play" >
+        <action
+            android:id="@+id/action_playFragment_to_historyFragment"
+            app:destination="@id/historyFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/historyFragment"
+        android:name="nl.svdoetelaar.madlevel4task2.ui.HistoryFragment"
+        android:label="fragment_history"
+        tools:layout="@layout/fragment_history" >
+        <action
+            android:id="@+id/action_historyFragment_to_playFragment"
+            app:destination="@id/playFragment" />
+    </fragment>
 </navigation>
